--- a/Lesson01/Exercise1.ipynb
+++ b/Lesson01/Exercise1.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "#URL of the dataset (acknowledgement to Michael Waskom who hosted this data in his github repo)\n",
-    "diamonds_url = \"https://github.com/TrainingByPackt/Interactive-Data-Visualization-with-Python/Lesson01/diamonds.csv\"\n"
+    "diamonds_url = \" https://raw.githubusercontent.com/mwaskom/seaborn-data/master/diamonds.csv \"\n"
    ]
   },
   {
@@ -59,3 +59,4 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
+
